# genai-lab

./: .gitignore  README.md
01-python-basics/: ch11-EF-environment-manage.md  ch14-EF-execution-engine.md  ch31-DS-data-structure.md  ch32-DS-oop-type-hints.md  ch33-DS-pydantic.md  ch41-FP-standard-lib.md  ch52-WS-fastapi.md  ch54-WS-pytest.md  python-readme.md
02-llm-basics/: ch00-llm-runtime-system.md  ch11-LP-llm-physics.md  ch12-LP-param-bound.md  ch21-API-inf-msg.md  ch21-MC-model-call.md  (+10 more)
codes/rag-knowledge-engine/: .env.example  .gitignore  README.md  pyproject.toml
codes/rag-knowledge-engine/app/: __init__.py  main.py
codes/rag-knowledge-engine/app/api/: __init__.py  routes.py  schemas.py
codes/rag-knowledge-engine/app/application/: __init__.py  services.py
codes/rag-knowledge-engine/app/core/: __init__.py  config.py
codes/rag-knowledge-engine/app/domain/: __init__.py  models.py
codes/rag-knowledge-engine/app/infrastructure/: __init__.py  database.py
codes/rag-knowledge-engine/app/ingestion/: __init__.py  chunker.py  ingestion_demo.py  parsers.py  parsers_llama.py  reader_demo.py  reader_load_demo.py  text_cleaning_demo.py
codes/rag-knowledge-engine/app/retrieval/: __init__.py  engine.py
codes/rag-knowledge-engine/docs/: technical-architecture.md
codes/rag-knowledge-engine/static/: index.html
codes/rag-knowledge-engine/static/css/: app.css
codes/rag-knowledge-engine/static/js/: app.js
codes/rag-knowledge-engine/tests/integration/: test_api.py
codes/rag-knowledge-engine/tests/unit/: test_parsers_llama.py  test_retrieval.py
(+117 files in other folders)
