[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-knowledge-engine"
version = "0.1.0"
description = "一个用于学习企业级 RAG 完整链路的知识库问答系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "python-multipart>=0.0.9",
  "pypdf>=5.0",
  "python-docx>=1.1",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.0", "pygments>=2.18"]
llama = [
  # Reader 0.6 的官方元数据要求 llama-index-core >=0.13,<0.15。
  "llama-index-core>=0.13,<0.15",
  "llama-index-readers-file>=0.6,<0.7",
  "pandas>=2.2,<3",
  # file Reader 对不同格式仍会延迟导入底层实现。
  "docx2txt>=0.9",
  "openpyxl>=3.1",
  "pypdf>=6.1.3,<7",
  # 当前 Python 环境不会自动补齐下面几个传递依赖，显式声明以保证可导入。
  "packaging>=24",
  "platformdirs>=4",
  "python-dateutil>=2.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
